--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 		<input type="submit" value="Avocado.  STAT.">
 	</form>
 
+	<div class="results">
+		
+	</div>
+
 	</div> <!-- Ends .wrapper -->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
