--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Holy Guacamole</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
 	
@@ -15,9 +16,7 @@
 		<input type="submit" value="Avocado.  STAT.">
 	</form>
 
-	<div class="results">
-		
-	</div>
+	<section class="results clearfix"></section>
 
 	</div> <!-- Ends .wrapper -->
 
