addition of gelocation

--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 		<h1>Holy Guacamole</h1>
 
 	<form class="search">
-		<input type="text" placeholder="Enter Location" class="location">
+		<!-- <input type="text" placeholder="Enter Location" class="location"> -->
 		<input type="submit" value="Avocado.  STAT.">
 	</form>
 
 	<section class="results clearfix"></section>
+
+	<footer>
+		<p>Created with <span>&hearts;</span> by <a href="http://www.allisontarr.com">Allison Tarr</a></p>
+	</footer>
 
 	</div> <!-- Ends .wrapper -->
 
