--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<form class="search">
 		<!-- <input type="text" placeholder="Enter Location" class="location"> -->
-		<input type="submit" value="Avocado.  STAT.">
+		<input type="submit" value="Avocado.  ASAP.">
 	</form>
 
 	<section class="results clearfix"></section>
