--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 	
 	<div class="wrapper">
 		<h1>Holy Guacamole</h1>
+		<p>It's a short walk to the nearest guac.</p>
 
 	<form class="search">
 		<!-- <input type="text" placeholder="Enter Location" class="location"> -->
-		<input type="submit" value="Avocado.  ASAP.">
+		<input type="submit" value="Avocado.  STAT.">
 	</form>
 
 	<section class="results clearfix"></section>
