Beginning of Loading Icon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Holy Guacamole</title>
 	<link rel="stylesheet" href="style.css">
+	<link href='http://fonts.googleapis.com/css?family=Istok+Web:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -17,10 +18,14 @@
 		<input type="submit" value="Avocado.  STAT.">
 	</form>
 
+	<img src="avocado.svg" alt="Avocado Icon">
+
+	<div class="spinner"><p>Loading...</p></div>
+
 	<section class="results clearfix"></section>
 
 	<footer>
-		<p>Created with <span>&hearts;</span> by <a href="http://www.allisontarr.com">Allison Tarr</a></p>
+		<p>Created with <span>&hearts;</span> by <a href="http://www.allisontarr.com">Allison Tarr</a> (card-carrying member of Team Avocado)</p>
 	</footer>
 
 	</div> <!-- Ends .wrapper -->
