Partial Loading Animation

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 		<input type="submit" value="Avocado.  STAT.">
 	</form>
 
-	<img src="avocado.svg" alt="Avocado Icon">
-
-	<div class="spinner"><p>Loading...</p></div>
+	<img class="avocado" src="avocado.svg" alt="Avocado Icon">
+	<div class="waiting">
+		<p>Loading...</p>
+	</div>
 
 	<section class="results clearfix"></section>
 
