added message if no results, adjusted styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="style.css">
 	<link href='http://fonts.googleapis.com/css?family=Istok+Web:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 	
@@ -14,7 +15,6 @@
 		<p>It's a short walk to the nearest guac.</p>
 
 	<form class="search">
-		<!-- <input type="text" placeholder="Enter Location" class="location"> -->
 		<input type="submit" value="Avocado.  STAT.">
 	</form>
 
@@ -26,7 +26,8 @@
 	<section class="results clearfix"></section>
 
 	<footer>
-		<p>Created with <span>&hearts;</span> by <a href="http://www.allisontarr.com">Allison Tarr</a> (card-carrying member of Team Avocado)</p>
+		<p>Created with <span>&hearts;</span> and the FourSquare API by <a href="http://www.allisontarr.com">Allison Tarr</a></p>
+		<p>Avocado icon provided by <a href="https://thenounproject.com/mikerowe/">Mike Rowe</a></p>
 	</footer>
 
 	</div> <!-- Ends .wrapper -->
