--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<section class="results clearfix"></section>
 
 	<footer>
-		<p>Created with <span>&hearts;</span> and the FourSquare API by <a href="http://www.allisontarr.com">Allison Tarr</a></p>
+		<p>Created with <span>&hearts;</span> & the FourSquare API by <a href="http://www.allisontarr.com">Allison Tarr</a></p>
 		<p>Avocado icon provided by <a href="https://thenounproject.com/mikerowe/">Mike Rowe</a></p>
 	</footer>
 
