--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 	<footer>
 		<p>Created with <span>&hearts;</span> & the FourSquare API by <a href="http://www.allisontarr.com">Allison Tarr</a></p>
-		<p>Avocado icon provided by <a href="https://thenounproject.com/mikerowe/">Mike Rowe</a></p>
+		<p class="credit">Avocado icon provided by <a href="https://thenounproject.com/mikerowe/">Mike Rowe</a></p>
 	</footer>
 
 	</div> <!-- Ends .wrapper -->
