--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Holy Guacamole</title>
 	<link rel="stylesheet" href="style.css">
-	<link href='http://fonts.googleapis.com/css?family=Istok+Web:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -14,21 +14,21 @@
 		<h1>Holy Guacamole</h1>
 		<p>It's a short walk to the nearest guac.</p>
 
-	<form class="search">
-		<input type="submit" value="Avocado.  STAT.">
-	</form>
+		<form class="search">
+			<input type="submit" value="Avocado. Stat.">
+		</form>
 
-	<img class="avocado" src="avocado.svg" alt="Avocado Icon">
-	<div class="waiting">
-		<p>Loading...</p>
-	</div>
+		<img class="avocado" src="avocado.svg" alt="Avocado Icon">
+		<div class="waiting">
+			<p>Loading...</p>
+		</div>
 
-	<section class="results clearfix"></section>
+		<section class="results clearfix"></section>
 
-	<footer>
-		<p>Created with <span>&hearts;</span> & the FourSquare API by <a href="http://www.allisontarr.com">Allison Tarr</a></p>
-		<p class="credit">Avocado icon provided by <a href="https://thenounproject.com/mikerowe/">Mike Rowe</a></p>
-	</footer>
+		<footer>
+			<p>Created with <span>&hearts;</span> & the FourSquare API by <a href="http://www.allisontarr.com">Allison Tarr</a></p>
+			<p class="credit">Avocado icon provided by <a href="https://thenounproject.com/mikerowe/">Mike Rowe</a></p>
+		</footer>
 
 	</div> <!-- Ends .wrapper -->
 
