playing with loading animation

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</form>
 
 		<img class="avocado" src="avocado.svg" alt="Avocado Icon">
-		<div class="waiting">
+		<div class="waiting loading">
 			<p>Loading...</p>
 		</div>
 
