--- a/index.html
+++ b/index.html
@@ -13,12 +13,19 @@
 	<div class="wrapper">
 		<h1>Holy Guacamole</h1>
 		<p>It's a short walk to the nearest guac.</p>
+		
+		<img class="walking" src="resources/walking.svg" alt="Walking Icon">
+		<img class="driving" src="resources/driving.svg" alt="Driving Icon">
 
 		<form class="search">
+			<input type="radio" name="walking" checked="true">
+			<input type="radio" name="driving" checked="false">
 			<input type="submit" value="Avocado. Stat.">
 		</form>
 
-		<img class="avocado" src="avocado.svg" alt="Avocado Icon">
+		<img class="avocado" src="resources/avocado.svg" alt="Avocado Icon">
+
+
 		<div class="waiting loading">
 			<p>Loading...</p>
 		</div>
