differing ajax calls

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 		<h1>Holy Guacamole</h1>
 		<p>It's a short walk to the nearest guac.</p>
 		
-		<!-- <img class="walking" src="resources/walking.svg" alt="Walking Icon">
-		<img class="driving" src="resources/driving.svg" alt="Driving Icon"> -->
+		<a class="walking" href="#"><img src="resources/walking.svg" alt="Walking Icon"></a>
+		<a class="driving" href="#"><img src="resources/driving.svg" alt="Driving Icon"></a>
 
 		<form class="search">
-			<!-- <input type="radio" name="walking" checked="true">
-			<input type="radio" name="driving" checked="false"> -->
+			<input type="radio" name="distance" checked="true" id="walking">Walking
+			<input type="radio" name="distance" id="driving">Driving
 			<input type="submit" value="Avocado. Stat.">
 		</form>
 
