--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
 		<a class="driving" href="#"><img src="resources/driving.svg" alt="Driving Icon"></a>
 
 		<form class="search">
-			<input type="radio" name="distance" checked="true" id="walking">Walking
-			<input type="radio" name="distance" id="driving">Driving
+			<input type="radio" name="distance" checked="true" id="walking">
+			<input type="radio" name="distance" id="driving">
 			<input type="submit" value="Avocado. Stat.">
 		</form>
 
 		<img class="avocado" src="resources/avocado.svg" alt="Avocado Icon">
-
 
 		<div class="waiting loading">
 			<p>Loading...</p>
