--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Holy Guacamole</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="icon" type="image/ico" href="avocado.ico">
 	<link href='http://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +12,7 @@
 <body>
 	
 	<div class="wrapper">
-		<h1>Holy Guacamole</h1>
+		<h1>Holy Guacamole!</h1>
 		<p>Choose whether you would you like to walk or drive by selecting one of the icons below.</p>
 
 		<a class="walking toggleSVG" href="#" alt="To Search Within Walking Distance"><svg id="walking" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
@@ -46,8 +47,8 @@
 		<section class="results clearfix"></section>
 
 		<footer>
-			<p>Created with <span>&hearts;</span> & the FourSquare API by <a href="http://www.allisontarr.com">Allison Tarr</a></p>
-			<p class="credit">Avocado icon provided by <a href="https://thenounproject.com/mikerowe/">Mike Rowe</a></p>
+			<p>Created by <a href="http://www.allisontarr.com">Allison Tarr</a> with <span>&hearts;</span> & the FourSquare API</p>
+			<p class="credit">Icons created by <a href="https://thenounproject.com/mikeashley/">Mike Ashley</a> & <a href="https://thenounproject.com/runspired/">Chris Thoburn</a></p>
 		</footer>
 		
 
