--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	
 	<div class="wrapper">
 		<h1>Holy Guacamole!</h1>
+		<p>Find the nearest guacamole to you.</p>
 		<p>Choose whether you would you like to walk or drive by selecting one of the icons below.</p>
 
 		<a class="walking toggleSVG" href="#" alt="To Search Within Walking Distance"><svg id="walking" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="140px" height="140px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
