--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 	<link href='http://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="Holy Guacamole!" />
+	<meta property="og:description" content="A potential solution for the perennial issue of where to find the nearest guacamole." />
+	<meta property="og:url" content="http://www.allisontarr.com/guacamole" />
+	<meta property="og:image" content="http://www.allisontarr.com/guacamole/resources/og.jpg" />
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:creator" content="@allisonplus">
+	<meta name="twitter:title" content="Holy Guacamole!">
+	<meta name="twitter:description" content="A potential solution for the perennial issue of where to find the nearest guacamole.">
+	<meta name="twitter:image:src" content="http://www.allisontarr.com/guacamole/resources/og-twitter.jpg">
 </head>
 <body>
 	
