--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Holy Guacamole!" />
 	<meta property="og:description" content="A potential solution for the perennial issue of where to find the nearest guacamole." />
-	<meta property="og:url" content="http://www.allisontarr.com/guacamole" />
-	<meta property="og:image" content="http://www.allisontarr.com/guacamole/resources/og.jpg" />
+	<meta property="og:url" content="http://allisontarr.com/guacamole/" />
+	<meta property="og:image" content="http://allisontarr.com/guacamole/resources/og.jpg" />
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:creator" content="@allisonplus">
 	<meta name="twitter:title" content="Holy Guacamole!">
 	<meta name="twitter:description" content="A potential solution for the perennial issue of where to find the nearest guacamole.">
-	<meta name="twitter:image:src" content="http://www.allisontarr.com/guacamole/resources/og-twitter.jpg">
+	<meta name="twitter:image:src" content="http://allisontarr.com/guacamole/resources/og-twitter.jpg">
 </head>
 <body>
 	
