--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 
 </head>
 <body>
-	
+
 	<div class="wrapper">
 		<h1>Holy Guacamole!</h1>
 		<p>Find the nearest guacamole to you.</p>
 		<p>Choose whether you would you like to walk or drive by selecting one of the icons below.</p>
 
-		<a class="walking toggleSVG svgColour" href="#" alt="To Search Within Walking Distance"><svg id="walking" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="140px" height="140px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+		<button class="walking toggleSVG svgColour"><svg id="walking" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="140px" height="140px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
 		<circle cx="55.66" cy="9.146" r="8.48"/>
-		<path d="M78.847,45.643l-12.228-5.408L58.84,24.224c-0.205-0.548-0.459-1.072-0.759-1.565l-0.185-0.379  c-0.463-0.95-1.19-1.657-2-2.054c-0.933-0.708-2.019-1.23-3.225-1.496c-0.706-0.155-1.412-0.205-2.109-0.177  c-0.62-0.02-1.279,0.073-1.942,0.309c-1.068,0.303-2.074,0.813-2.971,1.5l-18.264,9.66c-0.33,0.173-0.622,0.378-0.898,0.595  c-0.894,0.481-1.578,1.333-1.78,2.408l-2.853,15.118c-0.357,1.891,0.887,3.714,2.779,4.072c1.891,0.355,3.713-0.889,4.069-2.781  l2.677-14.182l9.81-5.19L36.872,49.66c-0.132,0.593-0.18,1.158-0.165,1.696l-3.272,20.436c-0.073,0.098-0.153,0.182-0.221,0.287  L20.342,91.926c-1.611,2.48-1.299,5.543,0.693,6.834c1.993,1.291,4.911,0.328,6.522-2.154L40.434,76.76  c0.405-0.629,0.689-1.293,0.854-1.953c0.151-0.35,0.278-0.715,0.341-1.109l2.428-15.17c0.297,0.084,0.595,0.156,0.896,0.221  c1.014,0.227,1.9,0.574,2.689,0.934l13.435,16.043l4.153,19.805c0.529,2.512,2.842,4.156,5.166,3.672  c2.323-0.492,3.784-2.924,3.253-5.441L69.43,73.652c-0.166-0.795-0.525-1.486-0.993-2.068c-0.158-0.275-0.341-0.545-0.556-0.801  L53.869,54.055l3.824-17.344l3.328,6.849c0.1,0.206,0.218,0.394,0.342,0.58c0.226,0.942,0.823,1.755,1.732,2.158l12.932,5.721  c1.617,0.719,3.56-0.129,4.339-1.89C81.145,48.367,80.467,46.361,78.847,45.643z"/></svg></a>
+		<path d="M78.847,45.643l-12.228-5.408L58.84,24.224c-0.205-0.548-0.459-1.072-0.759-1.565l-0.185-0.379  c-0.463-0.95-1.19-1.657-2-2.054c-0.933-0.708-2.019-1.23-3.225-1.496c-0.706-0.155-1.412-0.205-2.109-0.177  c-0.62-0.02-1.279,0.073-1.942,0.309c-1.068,0.303-2.074,0.813-2.971,1.5l-18.264,9.66c-0.33,0.173-0.622,0.378-0.898,0.595  c-0.894,0.481-1.578,1.333-1.78,2.408l-2.853,15.118c-0.357,1.891,0.887,3.714,2.779,4.072c1.891,0.355,3.713-0.889,4.069-2.781  l2.677-14.182l9.81-5.19L36.872,49.66c-0.132,0.593-0.18,1.158-0.165,1.696l-3.272,20.436c-0.073,0.098-0.153,0.182-0.221,0.287  L20.342,91.926c-1.611,2.48-1.299,5.543,0.693,6.834c1.993,1.291,4.911,0.328,6.522-2.154L40.434,76.76  c0.405-0.629,0.689-1.293,0.854-1.953c0.151-0.35,0.278-0.715,0.341-1.109l2.428-15.17c0.297,0.084,0.595,0.156,0.896,0.221  c1.014,0.227,1.9,0.574,2.689,0.934l13.435,16.043l4.153,19.805c0.529,2.512,2.842,4.156,5.166,3.672  c2.323-0.492,3.784-2.924,3.253-5.441L69.43,73.652c-0.166-0.795-0.525-1.486-0.993-2.068c-0.158-0.275-0.341-0.545-0.556-0.801  L53.869,54.055l3.824-17.344l3.328,6.849c0.1,0.206,0.218,0.394,0.342,0.58c0.226,0.942,0.823,1.755,1.732,2.158l12.932,5.721  c1.617,0.719,3.56-0.129,4.339-1.89C81.145,48.367,80.467,46.361,78.847,45.643z"/></svg></button>
 
-		<a class="driving svgColour" href="#" alt="To search within driving distance"><svg version="1.0" id="driving" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+		<button class="driving svgColour"><svg version="1.0" id="driving" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 			 width="140px" height="140px" viewBox="0 0 100 83.648" enable-background="new 0 0 100 83.648" xml:space="preserve">
 		<path d="M15.727,43.753"/>
 		<path d="M90.925,28.696L82.728,7.529C81.195,3.477,77.845,0.029,71.505,0h-11.56H40.188H28.427
@@ -42,11 +42,9 @@
 			h-0.067H17.541l6.182-16.668c0.746-2.366,1.904-4.059,4.639-4.1h21.571H50H71.64c2.693,0.041,3.854,1.733,4.636,4.1l6.183,16.668H50
 			z M84.274,50.874c-3.861,0.011-6.967-3.187-6.988-7.12c0.021-3.96,3.127-7.161,6.988-7.128c3.795-0.033,6.898,3.168,6.922,7.128
 			C91.172,47.687,88.069,50.884,84.274,50.874z"/>
-		<path d="M84.274,43.753"/></svg></a>
+		<path d="M84.274,43.753"/></svg></button>
 
 		<form class="search">
-			<input type="radio" name="distance" checked="true" id="walking">
-			<input type="radio" name="distance" id="driving">
 			<input type="submit" value="Avocado. Stat.">
 		</form>
 
@@ -66,7 +64,8 @@
 			</div> <!--/.wrapper-->
 		</footer>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
+	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	<script src="script.js"></script>
 </body>
 </html>
