--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <body>
 	<div class="wrapper">
 		<h1>Holy Guacamole!</h1>
-		<p>Find the nearest guacamole to you.</p>
-		<p>Choose whether you would you like to walk or drive by selecting one of the icons below.</p>
+		<p class="intro">Find the nearest guacamole to you.</p>
+		<p class="instructions">Choose whether you would you like to walk or drive by selecting one of the icons below.</p>
 
 		<button class="walking toggleSVG svgColour"><svg id="walking" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="140px" height="140px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
 		<circle cx="55.66" cy="9.146" r="8.48"/>
@@ -58,12 +58,11 @@
 
 		<footer>
 			<div class="wrapper">
-				<p>Created by <a href="http://www.allisontarr.com">Allison Tarr</a> with <span>&hearts;</span> & the FourSquare API</p>
+				<p class="creator">Created by <a href="http://www.allisontarr.com">Allison Tarr</a> with <span>&hearts;</span> & the FourSquare API</p>
 				<p class="credit">Icons created by <a href="https://thenounproject.com/mikeashley/">Mike Ashley</a> & <a href="https://thenounproject.com/runspired/">Chris Thoburn</a></p>
 			</div> <!--/.wrapper-->
 		</footer>
 
-	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	<script src="script.js"></script>
 </body>
