--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<title>Holy Guacamole!</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="icon" type="image/ico" href="avocado.ico">
-	<link href='http://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Holy Guacamole!" />
