nix clearfix pseudo element, center no-results message, add focus to submit

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		</div>
 	</div> <!-- Ends .wrapper -->
 
-		<section class="results clearfix"></section>
+		<section class="results"></section>
 
 		<footer>
 			<div class="wrapper">
